# QwenLocalLLM

./: .gitignore  README.md  README_EN.md  cleanup.bat  main.py  pruning.py  pyvenv.cfg  quantify.py  requirements.txt
Scripts/: activate  activate.bat  activate.fish  activate.nu  deploy_android.py  download_model.py  optimize_model.py  prepare_dataset.py  run_deployment.py  run_download.py  train_model.py
android/: build.gradle  gradle.properties  local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  phi2.cpp
config/: __init__.py  env_config.py  model_config.py
script/android/: project_generator.py
script/android/templates/: MainActivity.java  Utils.java  activity_main.xml
script/convert/: android_converter.py
script/data/: data_processor.py  dataset_utils.py  tts_dataset.py
script/deploy/: deployment_manager.py
script/download/: model_downloader.py
script/model/: __init__.py  fastspeech_adapter.py  model_adapter.py  model_adapters.py  tts_model_adapter.py
script/optimize/: ggml_quantizer.py  memory_optimizer.py  mobile_optimizer.py  model_optimizer.py  pruning_optimizer.py  quantization_optimizer.py
script/setup/: environment_setup.py
script/verify/: onnx_verify.py  verify_model.py
scripts/: build_ggml.py
tests/: test_integration.py  test_model.py  test_utils.py
utils/: __init__.py  android_optimizer.py  cache_manager.py  exceptions.py  helpers.py  logger_config.py  performance_monitor.py  resource_manager.py
(+8 files in other folders)
